--- a/maquetacion/styles.css
+++ b/maquetacion/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
+    font-size: 16px;
 }
 
 p {
@@ -14,6 +15,8 @@ p:hover {
     font-size: 0.8em;
     color: blue
 }
+
+
 
 
 h1 {
@@ -117,3 +120,20 @@ div#header-right:hover {
 img#logo1 {
     padding: 15%;
 }
+
+@media (width>= 3000px) {
+    div {
+        
+        font-size: 24px;
+
+    }
+}
+
+@media (width>=4000px) {
+    div {
+
+        font-size: 32px;
+
+    }
+}
+
